Fixed css issues on mce_editor placeholder visibility

--- a/core/component_text_area/css/mce_editor_default.less
+++ b/core/component_text_area/css/mce_editor_default.less
@@ -236,8 +236,9 @@ h2 {
 		top: 0;
 		left: 0;
 		padding: 10px;
-		opacity: 0.5;
-		font-style: italic
+		opacity: 0.4;
+		font-style: italic;
+		pointer-events: none;
 	}
 
 	.hide {
